tests/paczka1/small_fuzzy/17580096.err
Error in line 1: 3C12HjBLgxl A649 78,3
Error in line 3: sf5hBC4dgu4 S4dd 71,8
Error in line 2: 3C12HjBLgxl S383 31,0
